--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
-\usepackage[paperwidth=8.5in, paperheight=20in, margin=1.5in]{geometry}
+\usepackage[paperwidth=8.5in, paperheight=25in, margin=1.5in]{geometry}
 
 \usepackage{graphicx}
 \usepackage{amsmath}
@@ -54,8 +54,12 @@ where $\sigma^2=$ population variance and $s^2=$ sample variance. The denominato
     \item Symmetry: positive/right skew, negative/left skew, or normal curve
     \item Outliers: skew the distribution in its direction
     \item Center: mean = balancing point, median = data split in half
-    \item Spread
+    \item Spread: outliers affect spread by impacting skew
 \end{enumerate}
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=0.9\linewidth]{figures/skew.png}
+\end{figure}
 
 \noindent \begin{flushright} \hyperref[sec:top]{back to top} \end{flushright}
 \end{document}
