--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
-\usepackage[paperwidth=8.5in, paperheight=140in, margin=1.5in]{geometry}
+\usepackage[paperwidth=8.5in, paperheight=150in, margin=1.5in]{geometry}
 
 % removes paragraph indent
 \setlength\parindent{0pt}
@@ -421,14 +421,31 @@ Probability of coefficient value assuming null hypothesis (using gretl)
 \subsubsection{F-test}
 Joint significance: see which variables do not affect explanatory power of regression \\[0.5cm]
 Compute SSR for restricted and unrestricted models to find F-statistic:
-\begin{gather}
-    F = \frac{(SSR_r - SSR_{ur})/q}{SSR_{ur}/(n-k-1)}
-\end{gather}
+\begin{align}
+    F &= \frac{(SSR_r - SSR_{ur})/q}{SSR_{ur}/(n-k-1)} \\
+    &= \frac{(R_{ur}^2 - R_{r}^2)/q}{(1-R_{ur}^2)/(n-k-1)}
+\end{align}
 where $q$ is the number of restricted variables. Use gretl to find p-value.
 
 % \begin{gather}
 %     H_0 : \beta_3 = 0, \beta_4 = 0, \beta_5 = 0
 % \end{gather}
+
+\subsection{Dummy Variables}
+Dummy variables: a qualitative characteristic that takes a value of 0 or 1 as a variable (e.g., $female$ in $wage = \beta_0 + \delta_0  female + \beta_1 educ + u$) \\[0.5cm]
+Note: do not include all categories of the qualitative characteristic in the regression
+
+\subsubsection{Interaction}
+Interaction variable: additional variable that allows test of whether one variable's effects vary based on grouping (e.g., $female \cdot educ$)
+
+\subsubsection{Differences across Groups}
+Create unrestricted model with interaction variables for all variables and run test of joint significance (F-test) or run Chow test without interaction variables (separate regressions for different groups).
+
+\subsubsection{Chow Test}
+\begin{gather}
+    F = \frac{SSR_p - (SSR_1 + SSR_2)}{SSR_1 + SSR_2} \frac{n - 2(k+1)}{k+1}
+\end{gather}
+where $n$ is number of observations and $k$ is the number of interactions.
 
 \section{Appendix}
 \label{sec:appendix}
